--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,17 @@
 [package]
 name = "tuilet"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.5.17", features = ["cargo"] }
 ratatui = "0.28.1"
+regex = "1.10.6"
 tui-textarea = "0.6.1"
+
+[[bin]]
+name = "tuilet"
+path = "src/main.rs"
+doc = false
