--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,13 @@
 name = "tuilet"
 version = "0.1.1"
 edition = "2021"
+authors = ["pete gamache <pete@gamache.org>"]
+description = "A textual user interface for Toilet, the ANSI-art text generator"
+homepage = "https://github.com/gamache/tuilet"
+repository = "https://github.com/gamache/tuilet"
+keywords = ["ansi", "toilet", "figlet", "ascii", "ascii art"]
+categories = ["text-processing", "command-line-utilities"]
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
